# ais-workshop-prompt-engineering

./: .env.example  .gitignore  README.md  cafe_order_processor.py  pre-commit.sh  pyproject.toml  requirements-dev.txt  sample-outputs.txt
.github/workflows/: ci.yml
prompts/: system_prompt.json
tests/: __init__.py  test_cafe_order_processor.py
